crates/tui/tests/storybook/snapshots/app_dialog_permission__ask_user_question_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* ask_user_question 1 question                               14:37:03












──────────────────────────────────────────────────────────────────────
 ask_user_question: 1 question

 Allow?
  1. allow once
  2. deny
  3. allow ask_user_question for this session
  4. allow ask_user_question in ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
