crates/tui/tests/storybook/snapshots/app_dialog_permission__bash_long_command_summary_wraps.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash ls -ld /Users/leo/.dotfiles; realpath                 14:37:03
       /Users/leo/.dotfiles 2>/dev/null || true; cd /Users/
       leo/dev/rust/smelt/.worktrees/fix-path-parsing &&
       cargo test -p smelt-core permissions::tests






──────────────────────────────────────────────────────────────────────
 bash: ls -ld /Users/leo/.dotfiles; realpath /Users/leo/.dotfiles
       2>/dev/null || true; cd
       /Users/leo/dev/rust/smelt/.worktrees/fix-path-parsing &&
       cargo test -p smelt-core permissions::tests

 Allow?
  1. allow once
  2. deny

  press tab to add a reason…
 ○ normal                                                       1:1 0%
