crates/tui/tests/storybook/snapshots/app_dialog_permission__bash_multiline_command_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 22
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7   3 fg=Rgb { r: 249, g: 38, b: 114 }
  0  10   3 fg=Rgb { r: 255, g: 255, b: 255 }
  0  13   2 fg=Rgb { r: 249, g: 38, b: 114 }
  0  15   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  16   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  17   3 fg=Rgb { r: 255, g: 255, b: 255 }
  0  20   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  21   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  22   2 fg=Rgb { r: 249, g: 38, b: 114 }
  0  69  10 attrs=dim
  1   0   7 attrs=dim
  1   7  14 fg=Rgb { r: 255, g: 255, b: 255 }
  2   0   7 attrs=dim
  2   7   4 fg=Rgb { r: 249, g: 38, b: 114 }
 11   0  80 fg=AnsiValue(208)
 12   1   4 fg=AnsiValue(208)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  65 bg=AnsiValue(237)
 18   1   4 attrs=dim
 20   2  26 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  64 bg=AnsiValue(233)
 21  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
