crates/tui/tests/storybook/snapshots/app_dialog_permission__bash_outside_workspace_extra_options.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash cat /etc/hosts                                                  14:37:03










────────────────────────────────────────────────────────────────────────────────
 bash: cat /etc/hosts

 Allow?
  1. allow once
  2. deny
  3. allow cat *, /etc for this session
  4. allow cat *, /etc in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
