crates/tui/tests/storybook/snapshots/app_dialog_permission__bash_permission_dialog_long_extra_options_wrap.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash cat /var/log/smelt/projects/alpha/beta/gamma/delta/e  14:37:03
       psilon/very-long-permission-target.log



──────────────────────────────────────────────────────────────────────
 bash: cat

 /var/log/smelt/projects/alpha/beta/gamma/delta/epsilon/very-lo
       ng-permission-target.log

 Allow?
  4. allow cat /var/log/smelt/projects/alpha/beta/gamma/delta/eps
     ilon/very-long-permission-target.log, /var/log/smelt/project
     s/alpha/beta/gamma/delta/epsilon in workspace ~/cwd





  press tab to add a reason…
 ○ normal                                                      6:1 71%
