crates/tui/tests/storybook/snapshots/app_dialog_permission__bash_permission_dialog_long_extra_options_wrap.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 22
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7  52 fg=Rgb { r: 255, g: 255, b: 255 }
  0  59  10 attrs=dim
  1   0   7 attrs=dim
  1   7  38 fg=Rgb { r: 255, g: 255, b: 255 }
  5   0  70 fg=AnsiValue(208)
  6   1   4 fg=AnsiValue(208)
 11   1   6 attrs=dim
 12   0   1 bg=AnsiValue(237)
 12   1   1 fg=Black bg=White
 12   2   3 bg=AnsiValue(237) attrs=dim
 12   5  60 fg=AnsiValue(208) bg=AnsiValue(237)
 12  65   5 bg=AnsiValue(237)
 13   0   5 bg=AnsiValue(237)
 13   5  60 fg=AnsiValue(208) bg=AnsiValue(237)
 13  65   5 bg=AnsiValue(237)
 14   0   5 bg=AnsiValue(237)
 14   5  51 fg=AnsiValue(208) bg=AnsiValue(237)
 14  56  14 bg=AnsiValue(237)
 20   2  26 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  53 bg=AnsiValue(233)
 21  63   7 fg=AnsiValue(244) bg=AnsiValue(233)
